--- a/salvini-booking/src/app/room-list/room-list.component.html
+++ b/salvini-booking/src/app/room-list/room-list.component.html
@@ -1,4 +1,5 @@
 <div *ngFor = "let b of listaStanze">
     {{b.name}} <br>
+    <button (click)="dettagli(b)">mostra dettagli stanza</button>
     <hr>
 </div>
