--- a/salvini-booking/src/app/room-list/room-list.component.html
+++ b/salvini-booking/src/app/room-list/room-list.component.html
@@ -2,4 +2,7 @@
     {{b.name}} <br>
     <button (click)="dettagli(b)">mostra dettagli stanza</button>
     <hr>
+
+    
 </div>
+<app-dettagli-stanza [room] = "room"></app-dettagli-stanza>
